# aoc-cpp

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt
include/: aoc_includes.h  aoc_util.h
input/: 16.txt
src/: aoc_util.cpp  main.cpp
src/2021/: 10.cpp  11.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  6.cpp  7.cpp  CMakeLists.txt
src/2022/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
src/days/: 1.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  8.cpp  9.cpp
